FLY wire David/force-app/main/default/objects/Contact/fields/Account_Opportunity_Created_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Created_Campaign__c</fullName>
    <label>OBS_Account Opportunity Created Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>