FLY wire David/force-app/main/default/objects/Contact/fields/Account_Opportunity_Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Created_Timestamp__c</fullName>
    <label>OBS_Account Opportunity Created Date</label>
    <type>Date</type>
</CustomField>