FLY wire David/force-app/main/default/objects/Contact/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Lookup to Account Owner - help with mass Contact Reassignment.</description>
    <formula>Account.Owner.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>