FLY wire David/force-app/main/default/objects/Contact/fields/Acct_DHC_EMR_Vendor_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>Acct_DHC_EMR_Vendor_Inpatient__c</fullName>
    <description>The Contact’s Account DHC EMR Vendor Inpatient value copied via flow to this field for Marketo sync to keep updated at all times. SAL-4910</description>
    <inlineHelpText>The Account’s DHC EMR Vendor Inpatient copied via automation to this field.</inlineHelpText>
    <label>Acct DHC EMR Vendor Inpatient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>