FLY wire David/force-app/main/default/objects/Contact/fields/Acct_DHC_Net_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Acct_DHC_Net_Patient_Revenue__c</fullName>
    <description>The Contact’s Account DHC Net Patient Revenue value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s DHC DHC Net Patient Revenue value copied via automation to this field.</inlineHelpText>
    <label>Acct DHC Net Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>