FLY wire David/force-app/main/default/objects/Contact/fields/Acct_Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Acct_Employee_Range__c</fullName>
    <description>The Contact’s Account Employee Range value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s Employee Range value copied via automation to this field.</inlineHelpText>
    <label>Acct Employee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>