FLY wire David/force-app/main/default/objects/Contact/fields/Acct_ERP__c.field-meta.xml
<CustomField>
    <fullName>Acct_ERP__c</fullName>
    <description>The Contact’s Account ERP value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s ERP copied via automation to this field.</inlineHelpText>
    <label>Acct ERP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>