FLY wire David/force-app/main/default/objects/Contact/fields/Acct_No_International_Payers_At_Account__c.field-meta.xml
<CustomField>
    <fullName>Acct_No_International_Payers_At_Account__c</fullName>
    <description>The Contact’s Account No International Payers At Account value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s No International Payers At Account copied via automation to this field.</inlineHelpText>
    <label>Acct No International Payers At Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>