FLY wire David/force-app/main/default/objects/Contact/fields/Acct_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Acct_Shipping_Country__c</fullName>
    <description>The Contact’s Account Shipping Country value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s Shipping Country copied via automation to this field.</inlineHelpText>
    <label>Acct Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>