FLY wire David/force-app/main/default/objects/Contact/fields/Acct_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Acct_Sub_Industry__c</fullName>
    <description>The Contact’s Account sub industry value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s sub industry copied via automation to this field.</inlineHelpText>
    <label>Acct Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>