FLY wire David/force-app/main/default/objects/Contact/fields/Acct_Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Acct_Total_Enrollment__c</fullName>
    <description>The Contact’s Account Total Enrollment value copied via flow to this field for Marketo demographic scoring. SAL-4910</description>
    <inlineHelpText>The Account’s Total Enrollment copied via automation to this field.</inlineHelpText>
    <label>Acct Total Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>