FLY wire David/force-app/main/default/objects/Contact/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Field created for Marketo Sync</description>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>