FLY wire David/force-app/main/default/objects/Contact/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to identify this as the official person to send bills to for the associated Client.</description>
    <inlineHelpText>Check to identify this as the official person to send bills to for the associated Client.</inlineHelpText>
    <label>Billing Contact</label>
    <type>Checkbox</type>
</CustomField>