FLY wire David/force-app/main/default/objects/Contact/fields/Chargeback_Contact__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For RM&apos;s - is this contact a chargeback contact?</description>
    <inlineHelpText>Check if this is a person we can contact regarding chargeback cases.</inlineHelpText>
    <label>Chargeback Contact</label>
    <type>Checkbox</type>
</CustomField>