FLY wire David/force-app/main/default/objects/Contact/fields/CohortGo_ID__c.field-meta.xml
<CustomField>
    <fullName>CohortGo_ID__c</fullName>
    <description>Temporary field for the CohortGO Account ID, to help find mismatch between the Account inCH CRM and our Contacts/Accounts.</description>
    <inlineHelpText>Temporary field for the CohortGO Account ID, to help find mismatch between the Account inCH CRM and our Contacts/Accounts.</inlineHelpText>
    <label>Contact CohortGo ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>