FLY wire David/force-app/main/default/objects/Contact/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <description>Phone number for the Company or Company HQ&apos;s (added for Zoominfo data imported and request from B2B team.</description>
    <inlineHelpText>Phone number for the Company or Company HQ&apos;s</inlineHelpText>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>