FLY wire David/force-app/main/default/objects/Contact/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Select the association this account is a member of.</description>
    <inlineHelpText>Select the association this account is a member of.</inlineHelpText>
    <label>Contact Membership Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Association</valueSetName>
    </valueSet>
</CustomField>