FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Automation_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Contact_Automation_Bypass_DateTime__c</fullName>
    <description>Used for flow automation bypass of validation rules</description>
    <inlineHelpText>Used for flow automation bypass of validation rules</inlineHelpText>
    <label>Automation Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>