FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Automation_Bypassed__c</fullName>
    <description>Checkbox used for flow automation bypass of validation rules.</description>
    <formula>Contact_Automation_Bypass_DateTime__c  &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <inlineHelpText>Checkbox used for flow automation bypass of validation rules.</inlineHelpText>
    <label>Automation Bypassed</label>
    <type>Checkbox</type>
</CustomField>