FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Long_ID__c</fullName>
    <description>18 digit ID for Matching</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 digit  record ID for Matching. Use for Exports, Mass updates, etc.</inlineHelpText>
    <label>Contact Long ID</label>
    <type>Text</type>
</CustomField>