FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Partial_SB_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Partial_SB_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contact Partial SB ID</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>