FLY wire David/force-app/main/default/objects/Contact/fields/Contact_s_Office__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Office__c</fullName>
    <description>Enter the office that this contact works in (for EDU RM&apos;s)</description>
    <inlineHelpText>Enter the office that this contact works in (for EDU RM&apos;s)</inlineHelpText>
    <label>Contact&apos;s Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
                <label>CIO/CTO</label>
            </value>
            <value>
                <fullName>Compliance/Security</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Extension/Continuing Ed</fullName>
            </value>
            <value>
                <fullName>Finance/Business</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing/Engagement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Experience</fullName>
            </value>
            <value>
                <fullName>PFS – Patient Financial Services</fullName>
            </value>
            <value>
                <fullName>Purchasing/Procurement</fullName>
            </value>
            <value>
                <fullName>RevCycle</fullName>
            </value>
            <value>
                <fullName>Student Association</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>