FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Simplee_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Simplee_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID from Simplee Salesforce Org</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from Simplee Salesforce Org</inlineHelpText>
    <label>Contact Simplee ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>