FLY wire David/force-app/main/default/objects/Contact/fields/Contact_Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Team_Owner__c</fullName>
    <description>SAL-4567. For B2B team used to populate all Marketing sourced leads that are Invoiced only (ie should not be worked by the Flywire team) or will be managed by both teams.</description>
    <label>Contact Team Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Owner</valueSetName>
    </valueSet>
</CustomField>