FLY wire David/force-app/main/default/objects/Contact/fields/CSS_Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>CSS_Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM CSS Do Not Contact</description>
    <inlineHelpText>WPM CSS Do Not Contact</inlineHelpText>
    <label>CSS Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>