FLY wire David/force-app/main/default/objects/Contact/fields/Dashboard_Access__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For RM&apos;s - does the contact have dashboard access?</description>
    <inlineHelpText>Check if contact has dashboard access enabled.</inlineHelpText>
    <label>Dashboard Access</label>
    <type>Checkbox</type>
</CustomField>