FLY wire David/force-app/main/default/objects/Contact/fields/DHC_Email__c.field-meta.xml
<CustomField>
    <fullName>DHC_Email__c</fullName>
    <description>Custom Field to capture the DHC Email so ti does not override our Email field.</description>
    <inlineHelpText>Captures the DHC Email so ti does not override our Email field.</inlineHelpText>
    <label>DHC Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>