FLY wire David/force-app/main/default/objects/Contact/fields/Disqualified_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Campaign_Touch__c</fullName>
    <label>Disqualified Campaign Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>