FLY wire David/force-app/main/default/objects/Contact/fields/Disqualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Date_Time__c</fullName>
    <description>Date the person move to disqualified status. Must keep field to not lose current data.</description>
    <inlineHelpText>Date the person move to disqualified status.</inlineHelpText>
    <label>Disqualified Date Time</label>
    <type>DateTime</type>
</CustomField>