FLY wire David/force-app/main/default/objects/Contact/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Enter the reason that the person was disqualified.</description>
    <inlineHelpText>Enter the reason that the person was disqualified.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Not Qualified</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
                <label>Account Too Small</label>
            </value>
            <value>
                <fullName>Bad Email Address</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
            <value>
                <fullName>Marked Inactive</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Domestic Only</fullName>
                <isActive>false</isActive>
                <label>Domestic Only</label>
            </value>
            <value>
                <fullName>Happy With Competitor</fullName>
                <isActive>false</isActive>
                <label>Happy With Competitor</label>
            </value>
            <value>
                <fullName>Not A Fit</fullName>
                <isActive>false</isActive>
                <label>Not A Fit</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>Not The Proper Contact / Lead</fullName>
                <isActive>false</isActive>
                <label>Not The Proper Contact / Lead</label>
            </value>
            <value>
                <fullName>Product Not Available In Region</fullName>
                <isActive>false</isActive>
                <label>Product Not Available In Region</label>
            </value>
            <value>
                <fullName>Timing</fullName>
                <isActive>false</isActive>
                <label>Timing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>