FLY wire David/force-app/main/default/objects/Contact/fields/Disqualified_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Timestamp__c</fullName>
    <description>Date the person move to disqualified status. Must keep field to not lose current data.</description>
    <inlineHelpText>Date the person move to disqualified status.</inlineHelpText>
    <label>OBS_Disqualified Date</label>
    <type>Date</type>
</CustomField>