FLY wire David/force-app/main/default/objects/Contact/fields/Email_Preference__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference__c</fullName>
    <description>For Marketing use - field to capture if lead has opted in, out or is unknown. Requested by Jenna. This will help guide to Sales teams to know if a person in the database is someone marketing can mass email (opted in) or not.</description>
    <label>Email Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted-In</fullName>
            </value>
            <value>
                <fullName>Opted-Out</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>