FLY wire David/force-app/main/default/objects/Contact/fields/Email_Quarantined__c.field-meta.xml
<CustomField>
    <fullName>Email_Quarantined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WPM Email Address Quarantined</description>
    <inlineHelpText>WPM Email Address Quarantined</inlineHelpText>
    <label>Email Quarantined</label>
    <type>Checkbox</type>
</CustomField>