FLY wire David/force-app/main/default/objects/Contact/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field used to enter the employee name when they are referring a lead to the sales team. Will be used to calculate commissions on qualified leads that close deals coming from employees.</description>
    <inlineHelpText>Lookup field used to enter the employee name when they are referring a lead to the sales team.</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>