FLY wire David/force-app/main/default/objects/Contact/fields/Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for flow automation trigger. Admin only.</description>
    <inlineHelpText>Used for flow automation trigger. Admin only.</inlineHelpText>
    <label>Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>