FLY wire David/force-app/main/default/objects/Contact/fields/Flywire_Reference__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this Contact is willing to be a reference for Flywire. i/e. we can send prospects to them to find out more about us.</description>
    <inlineHelpText>Check if this Contact is willing to be a reference for Flywire. i/e. we can send prospects to them to find out more about us.</inlineHelpText>
    <label>Flywire Reference</label>
    <type>Checkbox</type>
</CustomField>