FLY wire David/force-app/main/default/objects/Contact/fields/In_Country_Representative__c.field-meta.xml
<CustomField>
    <fullName>In_Country_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this contact a university in-country representative who works in recruitment &amp; with agents in source countries? If yes, note the source country. SAL-3661</description>
    <inlineHelpText>Is this contact a university in-country representative who works in recruitment &amp; with agents in source countries? If yes, note the source country</inlineHelpText>
    <label>In-Country Representative</label>
    <type>Checkbox</type>
</CustomField>