FLY wire David/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when a sales/RM/Partner contact is no longer active.  They may have changed roles w/in the company or left the company. They no longer interact with Flywire.</description>
    <inlineHelpText>Check this box when a sales/RM/Partner contact is no longer active with Flywire.</inlineHelpText>
    <label>Inactive?</label>
    <type>Checkbox</type>
</CustomField>