FLY wire David/force-app/main/default/objects/Contact/fields/Is_Billing_Contact_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Contact_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-843 Workato needs to know if the billing contact changes and field tracking wouldn&apos;t help here because it needs to be a contact field in order to include it in the outbound message</description>
    <label>Is Billing Contact Changed</label>
    <type>Checkbox</type>
</CustomField>