FLY wire David/force-app/main/default/objects/Contact/fields/Is_Inactive_changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Inactive_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workato needs to know if the inactive changes and field tracking wouldn&apos;t help here because it needs to be a contact field in order to include it in the outbound message</description>
    <label>Is Inactive changed?</label>
    <type>Checkbox</type>
</CustomField>