FLY wire David/force-app/main/default/objects/Contact/fields/Last_Non_MKTG_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Non_MKTG_Activity__c</fullName>
    <description>The last non-marketing activity date and time for this person. Populated via flow.</description>
    <inlineHelpText>The last non-marketing activity date and time for this person.</inlineHelpText>
    <label>Last Non-MKTG Activity</label>
    <type>DateTime</type>
</CustomField>