FLY wire David/force-app/main/default/objects/Contact/fields/Main_Point_Person__c.field-meta.xml
<CustomField>
    <fullName>Main_Point_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For RM&apos;s - is this contact the main point personl?</description>
    <inlineHelpText>Check is this contact is your main point person.</inlineHelpText>
    <label>Main Point Person</label>
    <type>Checkbox</type>
</CustomField>