FLY wire David/force-app/main/default/objects/Contact/fields/mkto71_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Date__c</fullName>
    <description>Populated via Marketo integration.</description>
    <inlineHelpText>Populated via Marketo integration.</inlineHelpText>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>