FLY wire David/force-app/main/default/objects/Contact/fields/mkto71_Inferred_Company__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Company__c</fullName>
    <description>Web inferred company from Marketo.</description>
    <inlineHelpText>Web inferred company from Marketo.</inlineHelpText>
    <label>Marketo Inferred Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>