FLY wire David/force-app/main/default/objects/Contact/fields/mkto71_Inferred_State_Region__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_State_Region__c</fullName>
    <description>Web inferred Inferred State Region of the person based on ISP from Marketo.</description>
    <inlineHelpText>Web inferred Inferred State Region of the person based on ISP from Marketo.</inlineHelpText>
    <label>Marketo Inferred State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>