FLY wire David/force-app/main/default/objects/Contact/fields/mkto71_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Score__c</fullName>
    <description>Person score as set by marketo.</description>
    <inlineHelpText>Person score as set by marketo.</inlineHelpText>
    <label>Person Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>