FLY wire David/force-app/main/default/objects/Contact/fields/mkto71_Original_Referrer__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Referrer__c</fullName>
    <description>Original referrer of the person from Marketo.</description>
    <inlineHelpText>Original referrer of the person from Marketo.</inlineHelpText>
    <label>Marketo Original Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>