FLY wire David/force-app/main/default/objects/Contact/fields/mkto_si__Last_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
    <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c),
    HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?mode=fullList&amp;view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; SUBSTITUTE(mkto_si__Last_Interesting_Moment_Desc__c,SUBSTITUTE($Label.mkto_si__system_newline, &quot;--linebreak--&quot;, &quot;&quot;),&quot; &quot;) ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Interesting Moment</label>
    <type>Text</type>
</CustomField>