FLY wire David/force-app/main/default/objects/Contact/fields/mkto_si__Mkto_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Mkto_Lead_Score__c</fullName>
    <label>Mkto Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>