FLY wire David/force-app/main/default/objects/Contact/fields/mkto_si__Relative_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Relative_Score__c</fullName>
    <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relative Score</label>
    <type>Text</type>
</CustomField>